--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/sobre.css">
     <title>Projeto</title>
 </head>
 <body>
@@ -30,9 +31,58 @@
         </div>
     </header>
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
+        <section id="about">
+            <div class="conteudo">  
+                <header>
+                    <h2>Sobre mim</h2> 
+                </header>
+                <div class="sobre-box">
+                    <div class="text-box">
+                        <h1>Olá pessoal, bem vindo(a) ao meu Site.</h1><br>
+                        <p>
+                            Eu sou o Guilherme, um aprendiz apaixonado por tecnologia que enquanto garoto trocava as brincadeiras na rua para mergulhar no incrível mundo das redes. Quando ainda estava no ensino fundamental em meados de 2012, iniciei minha jornada como modder em jogos, posteriormente surgindo a necessidade da criação de um blog para compartilhar com a comunidade meus projetos autorais, e foi assim que tive meu primeiro contato com edição de templates em HTML/CSS.
+                        </p>
+                        <p><br>
+                            Meu período inicial foi por meio de erros e acertos, não sabia ao menos oque era linguagens de desenvolvimento, apenas observava aquelas linhas coloridas de código na página de edição e buscava entender para criar novas aplicações/funções.
+
+                        </p>
+                        <p><br>
+                            Fiquei alguns anos longe do desenvolvimento, voltando a me conectar recentemente em 2022, quando iniciei meus estudos em Desenvolvedor(a) Web FullStack na EBAC (Escola Britânica de Artes Criativas e Tecnologia), instituição que tem parceria com a Universidade de Hertfordshire, do Reino Unido. Atualmente estou cursando o módulo de Desenvolvimento Front-End do programa.
+                        </p>
+                        <p><br>
+                            Desde então, tenho continuado a desenvolver competências e capacidades técnicas, utilizando as mais recentes tecnologias do mercado sendo essas:
+                        </p><br>
+                        <p>
+                            <ul>
+                            <li>- HTML, Python, JavaScript, CSS e layouts Front-end</li>
+                            <li>- Criação de microsserviços</li>
+                            <li>- Automatização de fluxos de trabalho</li>
+                            <li>- Integração Front e Back-end</li>
+                            <li>- Desenvolvimento e testes com Django, Postgres e APIs</li>
+                            <li>- Implantação de softwares com abordagem DevOps</li>
+                            <li>- SQL e bancos de dados</li>
+                            </ul><br>
+                            Busco oportunidades e estou aberto a sugestões para que possa aplicar meus conhecimentos e me desenvolver como profissional.
+                        </p><br>
+                        <p>
+                            <ul>
+                            <li>GitHub: https://github.com/GCMorais</li>
+                            <li>Email: guilhermeclarodemorais@gmail.com</li>
+                            </ul>
+                        </p><br>
+
+                    </div>
+                    <div class="sobre-imgtext">
+                        <div class="imagem-box">
+                            <img src="../image/Foto1.png" alt="guilherme">
+                        </div>
+                        <h1>Varginha,MG</h1>
+                        <h1>23 anos</h1>
+                        <h1>Dev Junior</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <p>&copy; Purple. Todos os direitos reservados.</p>
