sobre mim estilizacao

--- a/html/index.html
+++ b/html/index.html
@@ -33,12 +33,12 @@
     <main>
         <section id="about">
             <div class="conteudo">  
-                <header>
+                <header class="sobre-header">
                     <h2>Sobre mim</h2> 
                 </header>
                 <div class="sobre-box">
                     <div class="text-box">
-                        <h1>Olá pessoal, bem vindo(a) ao meu Site.</h1><br>
+                        <h1>Olá pessoal, bem vindo(a)</h1><br>
                         <p>
                             Eu sou o Guilherme, um aprendiz apaixonado por tecnologia que enquanto garoto trocava as brincadeiras na rua para mergulhar no incrível mundo das redes. Quando ainda estava no ensino fundamental em meados de 2012, iniciei minha jornada como modder em jogos, posteriormente surgindo a necessidade da criação de um blog para compartilhar com a comunidade meus projetos autorais, e foi assim que tive meu primeiro contato com edição de templates em HTML/CSS.
                         </p>
@@ -54,13 +54,13 @@
                         </p><br>
                         <p>
                             <ul>
-                            <li>- HTML, Python, JavaScript, CSS e layouts Front-end</li>
-                            <li>- Criação de microsserviços</li>
-                            <li>- Automatização de fluxos de trabalho</li>
-                            <li>- Integração Front e Back-end</li>
-                            <li>- Desenvolvimento e testes com Django, Postgres e APIs</li>
-                            <li>- Implantação de softwares com abordagem DevOps</li>
-                            <li>- SQL e bancos de dados</li>
+                                <li>- HTML, Python, JavaScript, CSS e layouts Front-end</li>
+                                <li>- Criação de microsserviços</li>
+                                <li>- Automatização de fluxos de trabalho</li>
+                                <li>- Integração Front e Back-end</li>
+                                <li>- Desenvolvimento e testes com Django, Postgres e APIs</li>
+                                <li>- Implantação de softwares com abordagem DevOps</li>
+                                <li>- SQL e bancos de dados</li>
                             </ul><br>
                             Busco oportunidades e estou aberto a sugestões para que possa aplicar meus conhecimentos e me desenvolver como profissional.
                         </p><br>
@@ -76,9 +76,18 @@
                         <div class="imagem-box">
                             <img src="../image/Foto1.png" alt="guilherme">
                         </div>
-                        <h1>Varginha,MG</h1>
-                        <h1>23 anos</h1>
-                        <h1>Dev Junior</h1>
+                        <div class="text-img-box">
+                            <ul>
+                                <li><img src="../image/name-icon.png">Guilherme C.Morais</li>
+                                <li><img src="../image/age-icon.png">23 Anos</li>
+                                <li><img src="../image/home-icon.png">Varginha,MG</li>
+                            </ul>
+                        </div>
+                        <div class="icons-img-box">
+                            <a href="https://github.com/GCMorais" target="_blank"><img src="../image/github-icon.png"></a>
+                            <a href="https://www.linkedin.com/in/guilhermecmorais/" target="_blank"><img src="../image/linkedin-icon.png"></a>
+                            <a href="https://mail.google.com/" target="_blank"><img src="../image/email-icon.png"></a>
+                        </div>
                     </div>
                 </div>
             </div>
