html e css atualizacoes

--- a/html/index.html
+++ b/html/index.html
@@ -7,28 +7,31 @@
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link rel="stylesheet" type="text/css" href="../css/sobre.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;800&display=swap" rel="stylesheet">
     <title>Projeto</title>
 </head>
 <body>
     <header>
-        <div class="conteudo">
-            <div class="logo">
-                <a href="#home">
-                    <img src="../image/purple-logo.png" alt="logo-example">
-                </a>
-            </div>
-            <nav>
-                <div class="menu">
-                    <ul>
-                        <li><a class="home-botton" href="#">Home</a></li>
-                        <li><a class="botton" href="#">Sobre mim</a></li>
-                        <li><a class="botton" href="#">Quem Somos</a></li>
-                        <li><a class="botton" href="#">Lojas</a></li>
-                        <li><a class="contato-botton" href="#">Contato</a></li>
-                    </ul>
+            <div class="conteudo">
+                <div class="logo">
+                    <a href="#home">
+                        <img src="../image/purple-logo.png" alt="logo-example">
+                    </a>
                 </div>
-            </nav>
-        </div>
+                <nav>
+                    <div class="menu">
+                        <ul>
+                            <li><a class="home-botton" href="#">Home</a></li>
+                            <li><a class="botton" href="#">Sobre mim</a></li>
+                            <li><a class="botton" href="#">Projetos</a></li>
+                            <li><a class="botton" href="#">Cursos</a></li>
+                            <li><a class="contato-botton" href="#">Contato</a></li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
     </header>
     <main>
         <section id="about">
