--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../css/reset.css">
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link rel="stylesheet" type="text/css" href="../css/sobre.css">
+    <link rel="stylesheet" type="text/css" href="../css/home-page.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;800&display=swap" rel="stylesheet">
@@ -23,8 +24,8 @@
                 <nav>
                     <div class="menu">
                         <ul>
-                            <li><a class="home-botton" href="#">Home</a></li>
-                            <li><a class="botton" href="#">Sobre mim</a></li>
+                            <li><a class="home-botton" href="#home">Home</a></li>
+                            <li><a class="botton" href="#about">Sobre mim</a></li>
                             <li><a class="botton" href="#">Projetos</a></li>
                             <li><a class="botton" href="#">Cursos</a></li>
                             <li><a class="contato-botton" href="#">Contato</a></li>
@@ -34,11 +35,22 @@
             </div>
     </header>
     <main>
+        <section id="home">
+            <div class="conteudo">
+                <div class="home-page">
+                    <h1>Estudante Fullstack & Entusiasta</h1>
+                    <h2>Seja bem vindo ao meu mundo ;)</h2>
+                    <div class="home-img">
+                        <img src="../image/pronto.png" alt="guilherme-art">
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="about">
             <div class="conteudo">  
-                <header class="sobre-header">
+                <div class="sobre-header">
                     <h2>Sobre mim</h2> 
-                </header>
+                </div>
                 <div class="sobre-box">
                     <div class="text-box">
                         <h1>Olá pessoal, bem vindo(a)</h1><br>
