--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../css/style.css">
     <link rel="stylesheet" type="text/css" href="../css/sobre.css">
     <link rel="stylesheet" type="text/css" href="../css/home-page.css">
+    <link rel="stylesheet" type="text/css" href="../css/softskills.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;800&display=swap" rel="stylesheet">
@@ -36,7 +37,7 @@
     </header>
     <main>
         <section id="home">
-            <div class="conteudo">
+            <div class="conteudo"> 
                 <div class="home-page">
                     <h1>Estudante Fullstack & Entusiasta</h1>
                     <h2>Seja bem vindo ao meu mundo ;)</h2>
@@ -45,9 +46,37 @@
                     </div>
                 </div>
             </div>
+            <div class="homebackground">
+                <img src="../image/background-home.png" alt="guilherme-art">
+            </div>
+        </section>
+        <section id="soft">
+            <div class="conteudo">
+                <div class="softheader">
+                    <h1>Soft-skills</h1>
+                    <h2>Tenho certeza que posso corresponder as suas expectativas!!</h2>
+                </div>
+                <div class="softskills">
+                    <div class="soft-icons">
+                        <img src="../image/communicative-icon.png" alt="comunicativo">
+                        <h1>Comunicativo</h1>
+                        <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum.</p>
+                    </div>
+                    <div class="soft-icons">
+                        <img src="../image/diagram.png" alt="organizado">
+                        <h1>Organizado</h1>
+                        <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum.</p>
+                    </div>
+                    <div class="soft-icons">
+                        <img src="../image/pacience-icon.png" alt="paciente">
+                        <h1>Paciente</h1>
+                        <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum.</p>
+                    </div>
+                </div>
+            </div>
         </section>
         <section id="about">
-            <div class="conteudo">  
+            <div class="conteudo">
                 <div class="sobre-header">
                     <h2>Sobre mim</h2> 
                 </div>
