--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../css/sobre.css">
     <link rel="stylesheet" type="text/css" href="../css/home-page.css">
     <link rel="stylesheet" type="text/css" href="../css/softskills.css">
+    <link rel="stylesheet" type="text/css" href="../css/hardskills.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;800&display=swap" rel="stylesheet">
@@ -37,6 +38,11 @@
     </header>
     <main>
         <section id="home">
+            <div class="custom-shape-divider-top-1662580313">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+                </svg>
+            </div>
             <div class="conteudo"> 
                 <div class="home-page">
                     <h1>Estudante Fullstack & Entusiasta</h1>
@@ -46,8 +52,10 @@
                     </div>
                 </div>
             </div>
-            <div class="homebackground">
-                <img src="../image/background-home.png" alt="guilherme-art">
+            <div class="custom-shape-divider-bottom-1662580995">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z" class="shape-fill"></path>
+                </svg>
             </div>
         </section>
         <section id="soft">
@@ -73,12 +81,29 @@
                         <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum.</p>
                     </div>
                 </div>
+                <div class="softskills">
+                    <div class="soft-icons">
+                        <img src="../image/communicative-icon.png" alt="comunicativo">
+                        <h1>Comunicativo</h1>
+                        <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum.</p>
+                    </div>
+                    <div class="soft-icons">
+                        <img src="../image/diagram.png" alt="organizado">
+                        <h1>Organizado</h1>
+                        <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum.</p>
+                    </div>
+                    <div class="soft-icons">
+                        <img src="../image/pacience-icon.png" alt="paciente">
+                        <h1>Paciente</h1>
+                        <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum.</p>
+                    </div>
+                </div>
             </div>
         </section>
         <section id="about">
             <div class="conteudo">
                 <div class="sobre-header">
-                    <h2>Sobre mim</h2> 
+                    <h1>Sobre mim</h1> 
                 </div>
                 <div class="sobre-box">
                     <div class="text-box">
@@ -131,6 +156,38 @@
                             <a href="https://github.com/GCMorais" target="_blank"><img src="../image/github-icon.png"></a>
                             <a href="https://www.linkedin.com/in/guilhermecmorais/" target="_blank"><img src="../image/linkedin-icon.png"></a>
                             <a href="https://mail.google.com/" target="_blank"><img src="../image/email-icon.png"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="hard">
+            <div class="conteudo">
+                <div class="hardskills">
+                    <div class="hardheader">
+                        <h1>HardSkills</h1>
+                        <h2>Tecnologias que estou estudando no momento: </h2>
+                    </div>
+                    <div class="hardbox">
+                        <div class="hardimage">
+                            <img src="../image/notebook.svg" alt="hard image">
+                        </div>
+                        <div class="hardskills">
+                            <div class="hard-icons">
+                                <img src="../image/html-1.svg" alt="comunicativo">
+                                <h1>HTML5</h1>
+                                <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum.</p>
+                            </div>
+                            <div class="hard-icons">
+                                <img src="../image/css3-seeklogo.com.svg" alt="organizado">
+                                <h1>CSS3</h1>
+                                <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum.</p>
+                            </div>
+                            <div class="hard-icons">
+                                <img src="../image/logo-javascript.svg" alt="paciente">
+                                <h1>JavaScript</h1>
+                                <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
