--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="../css/home-page.css">
     <link rel="stylesheet" type="text/css" href="../css/softskills.css">
     <link rel="stylesheet" type="text/css" href="../css/hardskills.css">
+    <link rel="stylesheet" type="text/css" href="../css/projetos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;800&display=swap" rel="stylesheet">
@@ -28,7 +29,7 @@
                         <ul>
                             <li><a class="home-botton" href="#home">Home</a></li>
                             <li><a class="botton" href="#about">Sobre mim</a></li>
-                            <li><a class="botton" href="#">Projetos</a></li>
+                            <li><a class="botton" href="#projects">Projetos</a></li>
                             <li><a class="botton" href="#">Cursos</a></li>
                             <li><a class="contato-botton" href="#">Contato</a></li>
                         </ul>
@@ -45,7 +46,7 @@
             </div>
             <div class="conteudo"> 
                 <div class="home-page">
-                    <h1>Estudante Fullstack & Entusiasta</h1>
+                    <h1>Estudante <bold>Fullstack</bold> & Entusiasta</h1>
                     <h2>Seja bem vindo ao meu mundo ;)</h2>
                     <div class="home-img">
                         <img src="../image/pronto.png" alt="guilherme-art">
@@ -187,6 +188,43 @@
                                 <img src="../image/logo-javascript.svg" alt="paciente">
                                 <h1>JavaScript</h1>
                                 <p>Nullam senectus porttitor in eget. Eget rutrum leo interdum.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="projects">
+            <div class="conteudo">
+                <div class="projetos">
+                    <div class="project-header">
+                        <h1>Projetos</h1>
+                        <h2>Projetos que estou desenvolvendo: </h2>
+                    </div>
+                    <div class="main-project">
+                        <div class="project-area">
+                            <img src="../image/what-is-a-full-stack-developer.png" alt="imagem">
+                            <div class="project-text">
+                                <h3>Projeto 1</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui, ea dolores ut, eius illum reiciendis doloremque iusto porro in soluta tenetur vitae distinctio quo itaque dicta placeat, dolorum alias.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui, ea dolores ut, eius illum reiciendis doloremque iusto porro in soluta tenetur vitae distinctio quo itaque dicta placeat, dolorum alias.</p>
+                            </div>
+                        </div>
+                        <div class="project-area2">
+                            <img src="../image/what-is-a-full-stack-developer.png" alt="imagem">
+                            <div class="project-text">
+                                <h3>Projeto 2</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui, ea dolores ut, eius illum reiciendis doloremque iusto porro in soluta tenetur vitae distinctio quo itaque dicta placeat, dolorum alias.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui, ea dolores ut, eius illum reiciendis doloremque iusto porro in soluta tenetur vitae distinctio quo itaque dicta placeat, dolorum alias.</p>
+                                
+                            </div>
+                        </div>
+                        <div class="project-area3">
+                            <img src="../image/what-is-a-full-stack-developer.png" alt="imagem">
+                            <div class="project-text">
+                                <h3>Projeto 3</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui, ea dolores ut, eius illum reiciendis doloremque iusto porro in soluta tenetur vitae distinctio quo itaque dicta placeat, dolorum alias.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui, ea dolores ut, eius illum reiciendis doloremque iusto porro in soluta tenetur vitae distinctio quo itaque dicta placeat, dolorum alias.</p>
                             </div>
                         </div>
                     </div>
