--- a/html/index.html
+++ b/html/index.html
@@ -104,7 +104,8 @@
         <section id="about">
             <div class="conteudo">
                 <div class="sobre-header">
-                    <h1>Sobre mim</h1> 
+                    <h1>Sobre mim</h1>
+                    <h2>Conheça mais da minha história: </h2> 
                 </div>
                 <div class="sobre-box">
                     <div class="text-box">
