--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../css/softskills.css">
     <link rel="stylesheet" type="text/css" href="../css/hardskills.css">
     <link rel="stylesheet" type="text/css" href="../css/projetos.css">
+    <link rel="stylesheet" type="text/css" href="../css/cursos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;800&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
                             <li><a class="home-botton" href="#home">Home</a></li>
                             <li><a class="botton" href="#about">Sobre mim</a></li>
                             <li><a class="botton" href="#projects">Projetos</a></li>
-                            <li><a class="botton" href="#">Cursos</a></li>
+                            <li><a class="botton" href="#cursos">Certificados</a></li>
                             <li><a class="contato-botton" href="#">Contato</a></li>
                         </ul>
                     </div>
@@ -226,6 +227,26 @@
                                 <h3>Projeto 3</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui, ea dolores ut, eius illum reiciendis doloremque iusto porro in soluta tenetur vitae distinctio quo itaque dicta placeat, dolorum alias.</p>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui, ea dolores ut, eius illum reiciendis doloremque iusto porro in soluta tenetur vitae distinctio quo itaque dicta placeat, dolorum alias.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="cursos">
+            <div class="conteudo">
+                <div>
+                    <div class="cursos-area">
+                        <div class="cursos-header">
+                            <h1>Certificados</h1>
+                            <h2>Essas são as trilhas do meu caminho: </h2>
+                        </div>
+                        <div class="cursos-area">
+                            <div class="curso-img">
+                                <img src="../image/certificado.svg" alt="cursos/certificados">
+                            </div>
+                            <div class="curso-text">
+                                <h1>Escola Britânica de Artes Criativas e Tecnologia</Escola></h1>
                             </div>
                         </div>
                     </div>
