--- a/html/index.html
+++ b/html/index.html
@@ -243,10 +243,14 @@
                         </div>
                         <div class="cursos-area">
                             <div class="curso-img">
-                                <img src="../image/certificado.svg" alt="cursos/certificados">
+                                <img id="person-img" src="../image/certificado.svg" alt="cursos/certificados">
                             </div>
                             <div class="curso-text">
-                                <h1>Escola Britânica de Artes Criativas e Tecnologia</Escola></h1>
+                                <h1 id="person-text">Escola Britânica de Artes Criativas e Tecnologia</Escola></h1>
+                            </div>
+                            <div class="button-area">
+                                <button class="prev-btn" type="text">Clique</button>
+                                <button class="next-btn" type="text">Clique</button>
                             </div>
                         </div>
                     </div>
